@@ -707,6 +707,23 @@ data.raw.technology["belt-immunity-equipment"].unit.ingredients = {
   {"utility-science-pack", 1}
 }
 
+data.raw.technology["fission-reactor-equipment"].prerequisites = {
+  "sp-nuclear-science-pack-2"
+}
+data.raw.technology["fission-reactor-equipment"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"sp-logistic-science-pack-2", 1},
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-electronic-science-pack-2", 1},
+  {"sp-chemical-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1},
+  {"production-science-pack", 1},
+  {"utility-science-pack", 1},
+  {"sp-nuclear-science-pack-2", 1}
+}
+
 data.raw.technology["robotics"].prerequisites = {
   "sp-composites",
   "sp-titanium-machining",
