@@ -124,6 +124,7 @@ TODO for 0.3.12
   - Add back blunagium, grobgnum, rukite and yemnuth rockets (even though they are unlocked later)
 
 TODO for 0.3.xx
+  - Fix crafting categories for some recipes (like manufacturing)
   - Update all other productivity technologies (see steel plate productivity)
   - Support text plates mod
   - Support LTN mod
