@@ -9,7 +9,7 @@
     "space_travel_required": true,
     "dependencies": ["base >= 2.0.28",
                      "space-age >= 2.0.28",
-                     "SpaghetorioGraphics1 = 0.0.2",
+                     "SpaghetorioGraphics1 = 0.0.3",
                      "EverythingOnNauvis = 0.1.5",
                      "? aai-containers >= 0.3.1",
                      "! Custom-Production-UI-Fixed >= 0.5.22"]
